Bug 935934 - log filter hits before applying them so the message is still at the original location. r=rkent

--HG--
extra : histedit_source : b17c17d9970932a1fcf558b3c5e9207ef1844295